--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -17,12 +17,19 @@ spec:
         image: 114885604022.dkr.ecr.eu-central-1.amazonaws.com/2bcloud-repo-dev:latest
         ports:
         - containerPort: 8000
-        livenessProbe:
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "500m"
+            memory: "256Mi"
+        readinessProbe:
           httpGet:
             path: /healthz
             port: 8000
           initialDelaySeconds: 5
-          periodSeconds: 5
+          periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
@@ -30,8 +37,9 @@ metadata:
   name: hello-app
 spec:
   type: LoadBalancer
-  ports:
-    - port: 80
-      targetPort: 8000
   selector:
     app: hello-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
